--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ before_install:
   - conda info -a
 # Install packages
 install:
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib pandas statsmodels
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip atlas numpy scipy matplotlib pandas statsmodels
+  - pip install coveralls
   - source activate test-environment
-  - conda install coveralls
 
 # Run test
 script:
