--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ before_install:
 # Install packages
 install:
   - conda install --yes python=$TRAVIS_PYTHON_VERSION pip atlas numpy scipy matplotlib pandas statsmodels
-  - pip install coveralls
+  - pip install coveralls nose
 
 # Run test
 script:
-  - coverage run --source=src/timeTools src/runTests.py
+  - nosetests --with-cov --cov timeTools --cov-config .coveragerc --logging-level=INFO
   
 # Calculate coverage
 after_success:
