--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
 
 # Run test
 script:
-  - nosetests --with-cov --cov timeTools --cov-config .coveragerc --logging-level=INFO
+  - nosetests --with-cov --logging-level=INFO
   
 # Calculate coverage
 after_success:
