--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ script:
   
 # Calculate coverage
 after_success:
-  - coveralls --config_file .coveragerc
+  - coveralls --rcfile=.coveragerc
   
 sudo: false
