CI debug logging

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
 
 # Run test
 script:
-  - nosetests --with-cov --logging-level=INFO
+  - nosetests --with-cov --logging-level=DEBUG
   
 # Calculate coverage
 after_success:
