--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,14 @@ __pycache__
 *.pyc
 .project
 .pydevproject
+.coverage
 
 # Setuptools distribution folder.
 /dist/
 
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
+/.eggs/
 
 /venv/
 /.idea/
